--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
 
+/* styles/globals.css */
+/* @import 'swiper/swiper.min.css'; */
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
