--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,6 @@
 /* styles/globals.css */
 /* @import 'swiper/swiper.min.css'; */
 
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,7 +15,7 @@ body {
 
 @layer components {
   .btnPink {
-    @apply   bg-pink  text-white rounded-md hover:bg-hover-pink focus:outline-none w-48 h-8
+    @apply bg-pink  text-white rounded-md hover:bg-hover-pink focus:outline-none w-48 h-8;
   }
 }
 
